Fixing integration of pom and fixing bug in RetryRequestManagerTest so everything compiles.